fix: memperbaiki openapi
